got rid of warnings and changed up settings to make it better

--- a/src/main/resource/config/config.properties
+++ b/src/main/resource/config/config.properties
@@ -1,9 +1,10 @@
-#Directory Locations
+#DO NOT EDIT THIS HERE
 factorioDir=
 modDir=
+programDir=
 displayAssemblers=false
 oneAssembler=false
 displayMiner=false
 productionType=fixed
 rateType=minute
-language=english
+language=English
